# central

./: Cargo.toml
carrier/: Cargo.toml
central/: Cargo.toml
central/src/: main.rs
central/src/cli/: mod.rs  status.rs
central/src/cli/notes/: mod.rs
central/src/runners/: mod.rs
central_cli/: Cargo.toml
central_cli/src/: main.rs
central_cli/src/runners/: mod.rs  utils.rs
cli/: Cargo.toml
cli/src/: lib.rs
cli_macros/: Cargo.toml
cli_macros/src/: lib.rs
cliff/: Cargo.toml
cliff/src/: client.rs  lib.rs  server.rs
cliff/src/codec/: mod.rs  msgpack.rs
cliff/src/codec/rpc/: mod.rs
cliff/src/codec/rpc/msgpack/: mod.rs
cliff_macros/: Cargo.toml
cliff_macros/src/: lib.rs  utils.rs
cliff_macros/src/definitions/: mod.rs  nodes.rs  parse.rs  tokenize.rs
codec/: Cargo.toml
codec/src/: lib.rs
codec/src/rpc/: mod.rs
codec/src/rpc/json/: mod.rs  parsing.rs
codec/src/rpc/msgpack/: mod.rs  parsing.rs
examples/calc/: Cargo.toml
examples/calc/src/: lib.rs  main.rs
examples/tasks/: Cargo.toml
examples/tasks/examples/: task_interface.rs  task_provider.rs
examples/tasks/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/definitions/: cli.rs  mod.rs
macros/src/definitions/cliff/: mod.rs  nodes.rs  parse.rs  tokenize.rs  utils.rs
macros/src/definitions/registry/: mod.rs
macros/src/definitions/store/: mod.rs  nodes.rs  parse.rs  tokenize.rs
models/: Cargo.toml
models/src/: lib.rs  schema.rs
note_repo/: Cargo.toml
note_repo/src/: ipc.rs  lib.rs  main.rs
note_repo/src/actors/: index.rs  mod.rs  parser.rs  types.rs  utils.rs
note_repo/src/runners/: mod.rs
note_store/: Cargo.toml
note_store/migrations/00000000000000_diesel_initial_setup/: up.sql
note_store/migrations/2020-06-08-105910_create_notes/: up.sql
note_store/src/: ipc.rs  lib.rs  main.rs  models.rs  schema.rs
project/: Cargo.toml
project/migrations/2020-06-11-102507_create_projects/: up.sql
project/src/: ipc.rs  lib.rs  main.rs  models.rs  schema.rs
project_store/: Cargo.toml
project_store/src/: ipc.rs  lib.rs  models.rs
registry/: Cargo.toml
registry/src/: client.rs  codec.rs  ipc.rs  lib.rs  main.rs  registry.rs  server.rs
registry/src/registry/: actors.rs  messages.rs  mod.rs
registry_macros/: Cargo.toml
registry_macros/src/: lib.rs
registry_macros/src/definitions/: mod.rs
tasks/: Cargo.toml
tasks/examples/: task_interface.rs
tasks/src/: lib.rs
