[package]
name = "central"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
note_store = { path = "../note_store" }
registry = { path = "../registry" }
macros = {path = "../macros", features = ["cli"]}

clap = "3.0.0-beta.1"

actix-rt = "1.1"
actix = "0.10.0-alpha.3"

dialoguer = "0.6"
tempfile = "3"
rayon = "1.3"
tokio = { version = "0.2", features = ["time"] }
