[package]
name = "cliff"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "../macros", features = ["cliff"] }

async-trait = "0.1"
actix = "0.10.0-alpha.3"
byteorder = "1.3"
bytes = "0.5"
failure = "0.1.6"
futures = "0.3"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"]}
tokio = { version="0.2", features=["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
tracing = "0.1"
rand = "0.7"

rmp-serde = "0.14"
rmpv = "0.4"
