[package]
name = "codec"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
json=["serde_json"]
msgpack=["rmp-serde", "rmpv"]

[dependencies]
bytes = "0.5"
failure = "0.1.6"
serde = { version = "1.0", features = ["derive"]}
tokio-util = { version = "0.3", features = ["codec"] }
tracing = "0.1"

rmp-serde = { version = "0.14", optional = true }
rmpv = { version = "0.4", optional = true }

serde_json = { version = "1.0", optional = true }
