[package]
name = "macros"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
cliff = ["itertools"]
registry = ["heck"]
cli = []
store = ["itertools"]

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

itertools = { version = "0.9", optional = true }
heck ={ version = "0.3", optional = true }

[lib]
proc_macro = true
