[package]
name = "models"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
store = ["diesel"]

projects = ["notes"]
notes = []

[dependencies]
uuid = { version = "0.8", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"]}

diesel = { version = "1.4", features = ["postgres", "uuidv07"], optional = true}
