[package]
name = "note_repo"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliff = { path = "../cliff" }
registry = { path = "../registry" }
models = { path = "../models", features = ["notes"] }

actix = "0.10.0-alpha.3"
failure = "0.1.6"
uuid = { version = "0.8", features = ["v4", "serde"] }

dotenv = "0.15"

tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
