[package]
name = "note_store"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliff = { path = "../cliff" }
registry = { path = "../registry" }

actix = "0.10.0-alpha.3"
actix-rt = "1.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"]}
tokio = { version="0.2", features=["full"] }
failure = "0.1.6"
futures = "0.3"
uuid = { version = "0.8", features = ["v4"] }

dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "uuidv07"] }
