[package]
name = "registry"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
bytes = "0.5"
byteorder = "1.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
failure = "0.1.6"
im = "15.0"
tokio = { version="0.2", features=["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
