[package]
name = "registry"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliff = { path = "../cliff" }
registry_macros = { path = "../registry_macros" }

actix = "0.10.0-alpha.3"
actix-rt = "1.1"
async-trait = "0.1"
byteorder = "1.3"
bytes = "0.5"
failure = "0.1.6"
futures = "0.3"
futures-util = "0.3"
im = "15.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version="0.2", features=["full"] }
tokio-util = { version = "0.3", features = ["codec"] }
uuid = { version = "0.8", features = ["v4"] }
