[package]
name = "registry"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliff = { path = "../cliff" }
macros = { path = "../macros", features = ["registry"] }

actix = "0.10.0-alpha.3"
actix-rt = "1.1"
failure = "0.1.6"
futures = "0.3"
futures-util = "0.3"
im = "15.0"
tokio = { version="0.2", features=["full"] }
uuid = { version = "0.8", features = ["v4"] }

dotenv = "0.15"

tracing = "0.1"
tracing-appender = "0.1"
tracing-subscriber = "0.2"
