[package]
name = "calc"
version = "0.1.0"
authors = ["Murillo Nicacio <mnmaraes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cliff = { path = "../../cliff" }
actix = "0.10.0-alpha.3"
actix-rt = "1.1"
serde = { version = "1.0", features = ["derive"]}
